back button for legal notice added/greeting text overlapping issue fixed (#139)

--- a/src/app/main/info/legal-notice/legal-notice.scss
+++ b/src/app/main/info/legal-notice/legal-notice.scss
@@ -4,10 +4,7 @@
 	margin: 0 auto;
 	max-height: 100vh;
 	overflow-y: auto;
-
-	&::-webkit-scrollbar {
-		display: none;
-	}
+	scroll-behavior: smooth;
 }
 
 .legal-notice {
@@ -63,6 +60,18 @@
 	.highlight {
 		color: var(--bg-color-blue-lighter);
 	}
+
+	button {
+		background: none;
+		border: none;
+		cursor: pointer;
+	}
+
+	.headline {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
 }
 
 @include mixins.desktop {
@@ -70,22 +79,8 @@
 		height: 100%;
 
 		.legal-notice {
-			padding: 0 4rem;
+			padding: 0 3rem;
 			margin-bottom: 3rem;
 		}
 	}
-
-	.back-arrow {
-		display: none;
-	}
-}
-
-.back-arrow {
-	background: none;
-	border: none;
-	padding: 0;
-	position: fixed;
-	right: 15px;
-	top: 15%;
-	cursor: pointer;
 }
